// Copyright 2024 lack
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
// This file was autogenerated by goproto-gen. Do not edit it manually!

syntax = 'proto3';

package github.com.olive_io.olive.api.types.meta.v1;

// Package-wide variables from generator "generated".
option go_package = "github.com/olive-io/olive/api/types/meta/v1";

// +gogo:genproto=true
message DeleteOptions {
  string gvk = 1;

  string namespace = 2;

  string uid = 3;
}

// +gogo:genproto=true
message GetOptions {
  string gvk = 1;

  string name = 2;

  string namespace = 3;
}

// +gogo:genproto=true
message ListOptions {
  string gvk = 1;

  int64 limit = 2;

  string namespace = 3;

  map<string, string> labels = 4;
}

// +gogo:genproto=true
// +gogo:deepcopy=true
message ObjectMeta {
  string name = 1;

  string uid = 2;

  string description = 3;

  string namespace = 4;

  int64 creationTimestamp = 5;

  int64 updateTimestamp = 6;

  int64 deletionTimestamp = 7;

  int64 version = 8;

  map<string, string> labels = 9;

  map<string, string> annotations = 10;
}

// +gogo:genproto=true
message PatchOptions {
  string gvk = 1;

  string uid = 2;

  string namespace = 3;

  bytes data = 4;
}

// +gogo:genproto=true
message PostOptions {
  string gvk = 1;

  string uid = 2;

  string namespace = 3;

  bytes data = 4;
}

// +gogo:genproto=true
message Result {
  string gvk = 1;

  bool list = 2;

  int64 total = 3;

  bytes data = 4;
}

// +gogo:genproto=true
// +gogo:deepcopy=true
message TypeMeta {
  string kind = 1;

  string apiVersion = 2;
}

